generate specs
